--- a/fa/index.html
+++ b/fa/index.html
@@ -3,12 +3,22 @@
 <head>
     <title>Angular 2 Quickstart</title>
     <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.28/angular2.dev.js"></script>
-    <script src="https://jspm.io/system@0.16.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script>
+    <script>
+        //configure system loader
+        System.config({
+            defaultJSExtensions: true
+        });
+    </script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.44/router.dev.js"></script>
+    <!--script src="https://jspm.io/system@0.16.js"></script-->
 </head>
-<body>
+<body class = "container">
 <!-- The app component created in app.ts -->
-<my-app></my-app>
-<script>System.import('app');</script>
+    <my-app></my-app>
+    <script>
+        System.import('app');
+    </script>
 </body>
 </html>
