--- a/fa/index.html
+++ b/fa/index.html
@@ -2,16 +2,20 @@
 <html>
 <head>
     <title>Angular 2 Quickstart</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script>
     <script>
         //configure system loader
         System.config({
-            defaultJSExtensions: true
+            defaultJSExtensions: true,
+            experimentalDecorators: true,
+            typescriptOptions: { emitDecoratorMetadata: true, experimentalDecorators: true }
         });
     </script>
     <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.44/router.dev.js"></script>
+    <base href="/">
     <!--script src="https://jspm.io/system@0.16.js"></script-->
 </head>
 <body class = "container">
