--- a/fa/index.html
+++ b/fa/index.html
@@ -15,6 +15,7 @@
     </script>
     <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.44/router.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.45/http.dev.js"></script>
     <base href="/">
     <!--script src="https://jspm.io/system@0.16.js"></script-->
 </head>
