--- a/fa/index.html
+++ b/fa/index.html
@@ -3,8 +3,13 @@
 <head>
     <title>Angular 2 Quickstart</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script>
+    <!--script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/systemjs/0.18.4/system.src.js"></script-->
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+    <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <script>
         //configure system loader
         System.config({
@@ -13,17 +18,17 @@
             typescriptOptions: { emitDecoratorMetadata: true, experimentalDecorators: true }
         });
     </script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.52/angular2.dev.js"></script>
+    <!--script src="https://code.angularjs.org/2.0.0-alpha.52/angular2.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.52/router.dev.js"></script>
-    <script src="https://code.angularjs.org/2.0.0-alpha.52/http.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.52/http.dev.js"></script-->
     <base href="/">
     <!--script src="https://jspm.io/system@0.16.js"></script-->
 </head>
 <body class = "container">
 <!-- The app component created in app.ts -->
-    <my-app></my-app>
+    <my-app>Loading...</my-app>
     <script>
-        System.import('app');
+        System.import('app/app').then(null, console.error.bind(console));
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
