--- a/fa/index.html
+++ b/fa/index.html
@@ -10,13 +10,25 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
-    <script>
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <!--script>
         //configure system loader
         System.config({
             defaultJSExtensions: true,
             experimentalDecorators: true,
             typescriptOptions: { emitDecoratorMetadata: true, experimentalDecorators: true }
         });
+    </script-->
+    <script>
+        System.config({
+            packages: {
+                app: {
+                    format: 'register',
+                    defaultExtension: 'js'
+                }
+            }
+        });
+        System.import('app/app').then(null, console.error.bind(console));
     </script>
     <!--script src="https://code.angularjs.org/2.0.0-alpha.52/angular2.dev.js"></script>
     <script src="https://code.angularjs.org/2.0.0-alpha.52/router.dev.js"></script>
@@ -26,10 +38,7 @@
 </head>
 <body class = "container">
 <!-- The app component created in app.ts -->
-    <my-app>Loading...</my-app>
-    <script>
-        System.import('app/app').then(null, console.error.bind(console));
-    </script>
+<my-app>Loading...</my-app>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
 </body>
