--- a/fa/index.html
+++ b/fa/index.html
@@ -40,6 +40,7 @@
 <!-- The app component created in app.ts -->
 <my-app>Loading...</my-app>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="bower_components/tether/dist/js/tether.min.js"></script>
     <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
 </body>
 </html>
