--- a/fa/index.html
+++ b/fa/index.html
@@ -3,7 +3,9 @@
 <head>
     <title>Rift Run</title>
     <base href="/">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <!--link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css"-->
+    <link rel="stylesheet" href="main.css">
+    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
 
