--- a/fa/app/directives/modelselector.html
+++ b/fa/app/directives/modelselector.html
@@ -1,9 +1,10 @@
 <div class="demo">
-<!--div [ngFormModel]="form" class="mdl-selectfield">
+<!--div [ngFormModel]="form" class="mdl-selectfield"-->
+<!--div #form = "ngForm" class="mdl-selectfield">
     <select #sel (change)="select.emit(sel.value)" [ngFormControl]="form.controls[formKey]" class="browser-default">
         <option *ngFor="let model of models">
             {{model}}
         </option>
     </select>
-</--div-->
+</div-->
 </div>
