Fixed all the forms.

--- a/fa/app/app.html
+++ b/fa/app/app.html
@@ -1,4 +1,4 @@
-<!--md-toolbar-->
+<md-toolbar>
     <i class="material-icons demo-toolbar-icon">menu</i>
     <span>Rift Run</span> &nbsp;
     <div>
@@ -6,7 +6,7 @@
     </div>
 
     <span class="demo-fill-remaining"></span>
-<!--/md-toolbar-->
+</md-toolbar>
 
 <div class="container">
     <router-outlet></router-outlet>
